force-app/main/default/objects/PublicGroupAssignments__c/PublicGroupAssignments__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used for the public group assignments based on the user profile.</description>
    <label>Public Group Assignments</label>
</CustomObject>