force-app/main/default/objects/PublicGroupAssignments__c/fields/Executeforallchanges__c.field-meta.xml
<CustomField>
    <fullName>Executeforallchanges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether Trigger code needs to run for any change on the profile or not. If not selected by default it executes only on profile change at user level.</description>
    <label>Execute for all changes?</label>
    <type>Checkbox</type>
</CustomField>