force-app/main/default/objects/PublicGroupAssignments__c/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <description>Profile name</description>
    <label>Profile Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>