force-app/main/default/objects/PublicGroupAssignments__c/fields/PublicGroupName__c.field-meta.xml
<CustomField>
    <fullName>PublicGroupName__c</fullName>
    <description>Public group name</description>
    <label>Public Group Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>