force-app/main/default/objects/PublicGroupAssignments__c/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <description>Queue name for the user</description>
    <label>Queue Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>